# cf_ai_trip_planner

./: .gitignore  Cargo.toml  PROMPTS.md  README.md  schema.sql
public/: chat.html  index.html
src/: ai.rs  db.rs  lib.rs
