[package]
name = "cf_ai_trip_planner"
version = "0.1.0"
edition = "2021"
authors = ["Jack Frambes <jframbeees@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ["http", "axum", "d1"] }
uuid = {version = "1.18.1", features = ["v4" , "js"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
